<resources>
    <string name="app_name">Shipper</string>
    <string name="action_settings">Settings</string>
    <string name="home"> Home </string>
    <string name="ship_hang"> SHIP HÀNG </string>
    <string name="ship_tim_nguoi_nguoi_tim_ship"> Ship tìm người - Người tìm ship </string>
    <string name="ship_qua_vat"> SHIP QUÀ VẶT </string>
    <string name="the_gioi_qua_vat"> Thế giới quà vặt 24/7 </string>
    <string name="ship_tim_nguoi"> Ship tìm người </string>
    <string name="nguoi_tim_ship"> Người tìm ship </string>
    <string name="dang_nhap_facebook"> Đăng nhập bằng tài khoản Facebook </string>
    <string name="dang_nhap_shipper"> Bằng tài khoản Shipper </string>
    <string name="hoac"> Hoặc </string>
    <string name="ho_ten"> Nguyễn Trọng Quý </string>\
    <string name="so_dien_thoai"> 1234567890 </string>
    <string name="dang_nhap"> Đăng Nhập </string>
    <string name="quen_mat_khau">Quên Mật Khẩu</string>
    <string name="nhap_mat_khau"> Nhập Mật Khẩu </string>

    <string name="tab_create">Create</string>
    <string name="tab_vandonmoi">Vận đơn mới</string>
    <string name="tab_history">History</string>
    <string name="tab_historyship">Lịch Sử</string>
    <string name="tab_notification">Notification</string>
    <string name="tab_notificationship">Thông Báo</string>
    <string name="tab_map">Map</string>
    <string name="tab_mapship">Bản Đồ</string>

    <string name="login_2_dang_nhap"> Đăng Nhập </string>
    <string name="login_2_quen_mat_khau"> Quên Mật Khẩu</string>
    <string name="login_2_dang_ky"> Đăng Ký </string>

    <string-array name="profile_edit_screen_quan">
        <item> Ba Đình </item>
        <item> Cầu Giấy </item>
        <item> Hoàng Mai </item>
        <item> Long Biên </item>
    </string-array>

    <string-array name="profile_edit_screen_thanhpho">
        <item>Hà Nội </item>
        <item> Đà Nẵng </item>
        <item> Hồ Chí Minh </item>
        <item> Long Biên </item>
    </string-array>

    <string name="profile_edit_screen_name">Tuyên</string>
    <string name="profile_edit_screen_phone_number"> 012345678 </string>
    <string name="profile_edit_screen_address"> Lê Hồng Phong - Ba Đình - Hà Nội </string>

    <string name="register_screen_dang_ky"> Đăng Ký </string>
    <string name="register_screen_xac_nhan_mat_khau"> Xác Nhận Mật Khẩu </string>
    <string name="register_screen_mat_khau"> Mật Khẩu </string>
    <string name="register_screen_so_dien_thoai"> Số Điện Thoại</string>
    <string name="register_screen_dang_ky_su_dung"> Đăng Ký Sử Dụng</string>

    <string name="share_app_screen_text1">Mỗi Chia Sẻ thành công, bạn sẽ nhận được 10.000 VND của chương trình gửi đến tài khoản của bạn. Mỗi người bạn của bạn sử dụng mã chia sẻ, bạn nhận được 30. 000 VND. Cảm ơn bạn đã giúp chúng tôi chia sẻ ứng dụng này. ^^</string>
    <string name="share_app_screen_share_facebook">Chia Sẻ Trên Facebook</string>
    <string name="share_app_screen"> Thêm nội dung chia sẻ của bạn</string>
    <string name="share_app_screen_noidung">Các bạn ơi, dùng cái này hay lắm nhé</string>
    <string name="share_app_screen_mota"> Nhận ngay 30.000 khi cài đặt và sử dụng ứng dụng </string>
    <string name="share_app_screen_makm"> Mã Khuyến Mại PICO </string>
    <string name="share_app_screen_facebook"> http://facebook.com/homeship </string>
    <string name="share_app_screen_chiase"> Chia Sẻ </string>

    <string name="friend_invite_screen_moi_ban_qua_facebook">Mời Kết Bạn Trên Facebook</string>
    <string name="friend_invite_screen_moi_ban_qua_homeship"> Mời Bạn Đang Dùng HomeShip</string>
    <string name="friend_invite_screen_moi_ban_qua_danhba"> Mời bạn trong danh bạ của bạn</string>

    <string name="enter_otp_xac_nhan_ma_dang_ky">Xác Nhận Mã Đăng Ký </string>
    <string name="enter_otp__nhap_ma_xac_nhan">Nhập Mã Gửi Qua Số Điện Thoại Của Bạn </string>
    <string name="enter_otp_ma_xac_nhan">Mã Xác Nhận</string>
    <string name="enter_otp_button_chua_co_ma">Chưa Có Mã</string>
    <string name="enter_otp_button_hoan_thanh">Hoàn Thành</string>
    <string name="lable">Vận Đơn Mới</string>
    <string name="lablegiaohang">Yêu cầu giao hàng</string>
    <string name="lablenhanhang">Nhận hàng tại</string>
    <string name="lableThanhToan">Thông Tin Thanh Toán</string>
    <string name="lablephiship">Phí Ship:</string>
    <string name="labletigia">VND</string>
    <string name="labletienhang">Tiền Hàng</string>
    <string name="lablehinhthucthanhtoan">Thanh Toán</string>
    <string name="lablenote">Tặng ngay 20.000 khi giao dịch qua ví</string>
    <string name="tienmat">Tiền Mặt</string>
    <string name="KM">MÃ KM</string>
    <string-array name="thanhtoan_arrays">
        <item>tiền mặt</item>
        <item>bảo lãnh</item>
    </string-array>
    <string name="lableinputphone">Nhập số điện thoại để tạo đơn hàng</string>

    <string name="lablebuttonToanbo">Toàn Bộ</string>
    <string name="lablebuttonChoShip">Chờ Ship</string>
    <string name="lablebuttonThanhCong">Thành Công</string>
    <string name="lablebuttonmoi">Mới</string>
    <string name="lablebuttonchohang">Chờ Đến Lấy Hàng</string>
    <string name="lablebuttondanhdau">Đánh dấu</string>
    <string name="lablecannguoi">Cần người giao quần áo đi Giao Thủy</string>
    <string name="lablephi">Tiền Hàng: 300k Phí Ship 20k</string>
    <string name="lablebaolanh">Qua ví</string>
    <string name="lablenguoinhan">Có 10 shipper đã nhận được tin này</string>
    <string name="lablenguoidanhan">Có 4 shipper đã nhận giao</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>


    <string name="btn_back">Back</string>
    <string name="label_chatting">Đang chat</string>
    <string name="btn_send">Gửi</string>

    <string name="thanhtoanquatienmat">Thanh Toán Tiền Mặt</string>
    <string-array name="hinhthuc_arrays">
        <item>Thanh toán tiền mặt</item>
        <item>Thanh toán qua ví</item>
    </string-array>

    <string name="history_shipper_dennhanhang"> Đến Nhận Hàng </string>
    <string name="history_shipper_dangdigiao"> Đang Đi Giao </string>
    <string name="history_shipper_dagiaohang"> Đã Giao Hàng</string>
</resources>
