<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/background_loading_screen">

    <ImageView
        android:id="@+id/image_view_onLoginScreenFragment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/homeship" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_onLoginScreenFragment1"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:text="@string/ho_ten"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

    <TextView

        android:id="@+id/text_view_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_name"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="@string/so_dien_thoai"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

    <EditText
        android:hint="@string/nhap_mat_khau"
        android:id="@+id/edit_text_password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_phonenumber"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/buttonLoginOnLoginScreenFragment1"
        android:padding="10dp"
        android:background="@drawable/button_background"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/dang_nhap"
        android:layout_below="@+id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="30sp"/>
    <TextView
        android:textSize="30sp"
        android:layout_below="@+id/buttonLoginOnLoginScreenFragment1"
        android:layout_centerHorizontal="true"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/quen_mat_khau"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        android:id="@+id/textView" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

</RelativeLayout>