<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/orange"
            android:text="@string/lablebuttonToanbo"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/blue"
            android:text="@string/lablebuttonChoShip"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/color_white"
            android:text="@string/lablebuttonThanhCong"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">
        <ListView
            android:id="@+id/lvTimShip"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/orange">
        </ListView>
    </LinearLayout>

</LinearLayout>