<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/history_shipper_dennhanhang"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/history_shipper_dangdigiao"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/history_shipper_dagiaohang"
            android:textColor="@color/color_white"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/history_shipper_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>


</LinearLayout>