<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_loading_screen"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/image_view_logo_inLoginFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/homeship" />

    <Button
        android:id="@+id/buttonLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_logo_inLoginFragment"
        android:layout_marginTop="@dimen/padding_on_login_fragment"
        android:background="@drawable/button"
        android:padding="@dimen/padding_on_login_fragment"
        android:text="@string/dang_nhap_facebook"
        android:textColor="@color/color_white"
        android:textSize="@dimen/textsize_17" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLoginFacebook"
        android:background="@android:color/transparent"
        android:padding="@dimen/padding_on_login_fragment"
        android:text="@string/hoac"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_17" />

    <Button
        android:id="@+id/buttonLoginShipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:background="@drawable/button_background"
        android:padding="@dimen/padding_on_login_fragment"
        android:text="@string/dang_nhap_shipper"
        android:textColor="@color/color_white"
        android:textSize="@dimen/textsize_17" />

    <ProgressBar
        android:layout_below="@id/buttonLoginShipper"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>